<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createHabitFrag_root"
    android:layout_width="wrap_content"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/createHabit_title"
        android:textSize="22sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        android:text="@string/createHabit_title_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:maxLength="15"
        android:id="@+id/createHabit_habitName"
        android:inputType="textCapWords"
        android:hint="@string/createHabit_nameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:id="@+id/createHabit_posNeg_radioGroup"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/createHabit_pos_radioButton"
            android:layout_weight="1"
            android:text="@string/createHabit_radio_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/createHabit_neg_radioButton"
            android:layout_weight="1"
            android:text="@string/createHabit_radio_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/createHabit_goalText"
            android:text="@string/createHabitFrag_goalAtLeast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:maxLength="2"
            android:id="@+id/createHabit_goalEditText"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:hint="3" />

        <TextView
            android:text="@string/createHabit_goal_inBetweenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:maxLength="2"
            android:id="@+id/createHabit_goalTimespanEditText"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/createHabit_button_discard"
            android:text="Discard"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/createHabit_button_save"
            android:text="Save"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>